<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuario.RegistroUsuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reg_usuarios"
                android:textAlignment="center"
                android:textSize="30dp"></TextView>

        <ImageView
            android:id="@+id/fotPerfil"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            app:srcCompat="@mipmap/user"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="50dp" />

        <Button
            android:id="@+id/btn_foto_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/foto_perfil"></Button>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/usuario_nuevo"
                android:height="25dp"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_usuario"
                android:hint="@string/htn_nuevo_usuario"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:height="50dp"
                android:layout_marginBottom="30dp"></EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/contrasenia"
                android:height="25dp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_contra"
                android:hint="@string/hint_contrasenia"
                android:inputType="textVisiblePassword"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:height="50dp"
                android:layout_marginBottom="30dp"></EditText>
            <Button
                android:id="@+id/btn_regUx"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginHorizontal="16dp"
                android:onClick="onClick"
                android:text="@string/reg_ux"></Button>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>