<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="142dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/logo"
                        tools:layout_editor_absoluteX="172dp"
                        tools:layout_editor_absoluteY="50dp" />

                    <TextView
                        android:layout_width="192dp"
                        android:layout_height="match_parent"
                        android:text="@string/app_name"
                        android:textSize="40dp"></TextView>
                </TableRow>
            </TableLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:height="25dp"
                android:text="@string/usuario"></TextView>

            <EditText
                android:id="@+id/txt_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:height="50dp"
                android:hint="@string/hint_usuario"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:height="25dp"
                android:text="@string/contrasenia"></TextView>

            <EditText
                android:id="@+id/txt_contra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:height="50dp"
                android:hint="@string/hint_contrasenia"
                android:inputType="textVisiblePassword"></EditText>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginHorizontal="16dp"
                android:text="@string/btn_login"></Button>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>