<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            app:srcCompat="@drawable/graph"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/grafica" />

            <TextView
                android:id="@+id/descriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mira_el_grafico_de_tu_progres"
                android:textSize="11sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/statusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/disponible"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
